<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat</string>
    <string name="formulaire">Application de messagerie</string>
    <string name="login">Nom d\'utilisateur</string>
    <string name="button_register">S\'enregistrer</string>
    <string name="alert">Champs vides</string>
    <string name="button_login">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="action_settings">Settings</string>
    <string name="message_field">Message</string>
    <string name="send_message">Envoyer</string>
    <string name="title_activity_logged_activity">Logged_activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="title_activity_dashboard">Chat 2.0</string>
    <string name="title_activity_send_message">SendMessageActivity</string>
    <string name="disconnect">Déconnexion </string>
    <string name="drawing">Dessin</string>
    <string name="label_menu">Menu</string>
    <string name="label_refresh">Actualiser</string>

</resources>
