<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    >

    <TextView
        android:id="@+id/label"
        android:text="@string/formulaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/chat_dark"/>

    <LinearLayout
        android:id="@+id/form"
        android:layout_below="@+id/label"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alert_text"
            android:text="@string/alert"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/login"
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/password"
            android:password="true"
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout

        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/button_login"
            android:id="@+id/button_login"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/chat_light"/>

        <Button
            android:text="@string/button_register"
            android:id="@+id/button_register"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/chat_dark"/>

    </LinearLayout>

</RelativeLayout>